<resources>
    <string name="app_name">SRM Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //addtional values
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_exit">Are You Sure To Exit</string>
    <string name="are_you_sure_submit">Do you want to submit your answers?</string>
    <string name="submit">submit</string>
    <string name="splash_title">Secure Digital Examination Platform</string>
    <string name="login_title">Login</string>
    <string name="title_header">Please enter your login credentials to proceed</string>
    <string name="user_name">User Name</string>
    <string name="password">Enter Your Date of Birth(2020-20-01)</string>
    <string name="login_button">Login</string>
    <string name="srmimage_todo">TODO</string>
    <string name="toggle_todo">TODO</string>
    <string name="test_header">Test</string>
    <string name="log_out">Log Out</string>
    <string name="time_duration">Time Duration</string>
    <string name="submit_answer">SUBMIT</string>
    <string name="subject_name">EXERCISE THERAPY II Exam</string>
    <string name="completed_button">Completed</string>
    <string name="questions">Questions</string>
    <string name="sucessfully">You have completed the test and your</string>
    <string name="test_completed_successfully">Test Completed Successfully!</string>
    <string name="answers_have_been_saved_successfully">answers have been saved successfully.</string>
    <string name="todo_submit_image">TODO</string>
    <string name="ok_submit">OK</string>
    <string name="ooops">Ooops!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_connect_the_internet_and_try_again">Please connect the internet and try again.</string>
    <string name="retry">Retry</string>
    <string name="no_question_paper_available">NO Question Paper Available</string>
    <string name="it_seems_there_is_no_question_paper_available_notify_you">it seems there is no question paper available.Notify you</string>
    <string name="once_a_question_becomes_available">once a question becomes available</string>
    <string name="please_be_patient">Please Be Patient!</string>
    <string name="your_paper_is_presently_undergoing_submission">Your Paper is presently undergoing submission</string>
    <string name="no_question_paper_available_be_patient">NO Question Paper Available</string>
    <string name="it_seems_there_is_no_question_paper_available_notify_you_bePatient">it seems there is no question paper available.Notify you</string>
    <string name="once_a_question_becomes_available_bePatient">once a question becomes available</string>
    <string name="swipe_up_to_add_page">Swipe up to\nAdd Page</string>
    <string name="pencil_todo">Pencil</string>
    <string name="eraser_todo">Eraser</string>
    <string name="multi_color_todo">Color Pencil</string>
    <string name="undo_button">Undo Button</string>
    <string name="redo_button">Redo button</string>
    <string name="size_3">Size 3</string>
    <string name="size_4">Size 4</string>
    <string name="size_5">Size 5</string>
    <string name="size_10">Size 10</string>
    <string name="size_40">Size 40</string>
    <string name="size_70">Size 70</string>
    <string name="size_25">Size 25</string>
    <string name="show_password">showPassword</string>
    <string name="logout_title">Logout</string>
    <string name="are_you_sure_want_to_nlogout">Are you sure want to \nLogout?</string>
    <string name="logout_button">Logout</string>
    <string name="cancel_text">Cancel</string>


</resources>