<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/noQuestions"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="250dp"
        android:src="@drawable/no_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_question_paper_available"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noQuestions"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/questionNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_seems_there_is_no_question_paper_available_notify_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionTitle"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/once_a_question_becomes_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionNotify"
        android:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>